test/expressions/bradc/reduceVsMathPrec2.good
reduceVsMathPrec2.chpl:12: error: cannot initialize 'total' of type 'int(64)' from a 'promoted expression yielding int(64)'
